# certifiable-harness

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  buildfile  manifest
.github/workflows/: ci.yml
certifiable-harness/: manifest
certifiable-harness-tests/: manifest
docs/: CH-MATH-001.md  CH-STRUCT-001.md
docs/requirements/: SRS-GOLDEN.md  SRS-HARNESS.md  SRS-REPORT.md  SRS-STAGES.md
include/: buildfile  ch_golden.h  ch_harness.h  ch_hash.h  ch_report.h  ch_stages.h  ch_types.h
src/: buildfile  golden.c  harness.c  hash.c  main.c  report.c  stages.c
test_data/golden/: .gitkeep
tests/unit/: buildfile  test_golden.c  test_harness.c  test_report.c  test_stages.c
tools/: compare_platforms.py
